# SeaChess

./: .gitignore  CMakeLists.txt  README.md
include/: board.h  chess.h  chess_utils.h  engine.h  move.h  moves_tree.h  pieces.h  program_options.h  random_moves_game.h
src/: bishop.C  board.C  engine.C  eval_move.C  king.C  knight.C  main.C  move.C  moves_tree.C  moves_tree_minimax.C  moves_tree_monte_carlo.C  parse_cmdline_options.C  pawn.C  pieces.C  queen.C  random_moves_game.C  rook.C  stream_player.C
tests/: xboard.debug.checkmate2  xboard.debug.levels6  xboard.debug.unit_test  xboard.debug.unit_test2  xboard.debug.unit_test3  xboard.debug.unit_test4
utils/: filter.xboard.debug.pl
